Pro 1.0.5
=========

Fixes:
 - MODELER-409: NPE on autosave from UI design
 - MODELER-418: Hibernate 'lazy initialization' exception on save (2)

New features:
 - contentType attribute on HTTP protocol (MODELER-416)
 - Have protocol names ordered alphabetically for commands (MODELER-417)

Pro 1.0.4
=========

Fixes:
 - MODELER-410: KNX import not working anymore

Pro 1.0.3
=========

Fixes:

 - MODELER-346: regexp validation for IP fields in TCP
   and Telnet protocols were wrong. Validations have
   been disabled.
 - MODELER-399: Order of windows

New features:
 - LPD protocol support (MODELER-406)
 - panStamps Lagarto configuration (MODELER-397)
 - Round-robin database (RRD) configuration (MODELER-394)

Pro 1.0.2
=========

- MODELER-396: org.springframework.orm.hibernate3.HibernateSystemException
  when saving UI design
- MODELER-398: Setting a sensor on a Web element does not work
- MODELER-392: Fractional Widget Coordinates when Browser
  has non-default zoom

Pro 1.0.1
=========

- MODELER-384: Property form title is wrong for webview
  and color picker components
- MODELER-360: Command, Sensor, Switch names are
  not correctly encoded/decoded
- MODELER-385: Double scrollbar on widget selection
- MODELER-391: Add Domintell connection configuration
  possibility
- MODELER-395: Incorrect password field generated
  in panel.xml for Web element
- MODELER-389: LazyInitializationException on
  Device.deviceAttrs

Designer 2.13.6 (2012-09-20 Rosemary)
=====================================

Bug fix release:

 - Increase maximum command field length from 1000
   characters to 4000 characters for UDP, TCP, HTTP
   and Telnet protocols
 - MODELER-379: attempting to delete an already deleted
   device shows up as an error to the user
 - MODELER-380: Log errors related to data integrity
   issues when loading switches for a device
 - Add panStamps lagarto server protocol configuration


Designer 2.13.5 (2012-09-11 Rosemary)
=====================================
